after adding  pagination: first step and some changes on styles

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <div id="root"></div>
+  <body >
+    <div id="root" style="padding:0;" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
